Archive2/93/9516fb4b0f27e6/output
main.cpp: In constructor 'B<T>::B()':
main.cpp:10:11: error: 'x' was not declared in this scope
     B() { x = 3; }
           ^
